@@ -255,7 +255,7 @@ _(" --peer-id-prefix=PEERI_ID_PREFIX Specify the prefix of peer ID. The peer ID 
   "                              added to make it's length 20 bytes.\n"\
   "                              Default: -aria2-")
 #define TEXT_ENABLE_PEER_EXCHANGE \
-_(" --enable-peer-exchange[=true|false] Enable peer exchange extension.")
+_(" --enable-peer-exchange[=true|false] Enable Peer Exchange extension.")
 #define TEXT_ENABLE_DHT \
 _(" --enable-dht[=true|false]    Enable DHT functionality.")
 #define TEXT_DHT_LISTEN_PORT \
@@ -271,11 +271,12 @@ _(" --dht-entry-point=HOST:PORT  Set host and port as an entry point to DHT\n"\
 _(" --bt-min-crypto-level=plain|arc4 Set minimum level of encryption method.\n"\
   "                              If several encryption methods are provided by a\n"\
   "                              peer, aria2 chooses a lowest one which satisfies\n"\
-  "                              given level.")
+  "                              the given level.")
 #define TEXT_BT_REQUIRE_CRYPTO \
 _(" --bt-require-crypto=true|false If true is given, aria2 doesn't accept and\n"\
   "                              establish connection with legacy BitTorrent\n"\
-  "                              handshake. Thus always use Obfuscation handshake.")
+  "                              handshake. Thus aria2 always uses Obfuscation\n"\
+  "                              handshake.")
 #define TEXT_METALINK_FILE \
 _(" -M, --metalink-file=METALINK_FILE The file path to the .metalink file.")
 #define TEXT_METALINK_SERVERS \
