@@ -1,5 +1,10 @@
 2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Updated text.
+	* src/usage_text.h
+
+2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	* src/MSEHandshake.cc (encryptAndSendData): Use std::min().
 
 2008-02-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
